fixed slightly alignment

--- a/themes/matrix-theme/assets/css/style.css
+++ b/themes/matrix-theme/assets/css/style.css
@@ -6,7 +6,7 @@ Description: wordpress theme for new MATRIX site
 Requires at least: 5.3
 Tested up to: 5.5
 Requires PHP: 5.6
-Version: 1.3
+Version: 1.4
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: matrix-theme
@@ -1876,7 +1876,7 @@ html[xmlns] .flexslider .slides {
 	}
 	.wp-block-column~.wp-block-column {
 		margin: 0;
-		padding-left: 0;
+		padding-left: 16px;
 	}
 	header.wp-block-template-part {
 		height: 86px;
@@ -1904,8 +1904,8 @@ html[xmlns] .flexslider .slides {
 		padding: 60px 0;
 		position: absolute;
 		top: calc(100% - 0.5px);
-		left: -60px;
-		width: 100vw;
+		left: -75px;
+		width: 110vw;
 		height: 100vh;
 		background: var(--header-background-color);
 		background-size: cover;
@@ -2196,6 +2196,19 @@ html[xmlns] .flexslider .slides {
 	.nav-media-s, .sitemap-media-s {
 		display: flex;
 	}
+
+	/* WooCommerce tablet RWD  */
+	.products .product.type-product,
+	.wc-block-grid__product {
+		max-width: 48%;
+	}
+	.products, .wc-block-grid__products {
+		display: flex;
+		justify-content: flex-start;
+		flex-wrap: wrap;
+		width: 100%;
+		gap: 2%;
+	}
 }
 
 @media only screen and (max-width: 991px) {
@@ -2217,6 +2230,13 @@ html[xmlns] .flexslider .slides {
 	.nav-dd, .i18n-dd {
 		display: none;
 	}
+	.is-style-front-content,
+	.wp-block-spacer,
+	.wp-block-post-content>*:not(.wp-block-matrix-banner-block),
+	.wp-site-blocks>.wp-block-matrix-call-to-action-block {
+		padding: 15px;
+	}
+
 
 	/* navbar menu mobile RWD  */
 	.nav-logo {
